<?xml version="1.0" encoding="utf-8"?>
<!--add scroll bar?-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailActivity"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg_email_activity"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_title_et"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_subject_hint"
        android:background="@drawable/bg_et_main"
        android:padding="10dp"

        />
        <!--android:inputType="text|textEmailSubject"-->



    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:lines="8"
        android:scrollbars="vertical"
        android:gravity="top"
        android:id="@+id/email_msg_et"
        android:layout_below="@id/email_title_et"
        android:layout_marginTop="20dp"
        android:hint="@string/email_msg_hint"
        android:inputType="text|textMultiLine"
        android:background="@drawable/bg_et_msg"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/email_sending_lo"
        android:layout_below="@id/email_msg_et"
        android:paddingTop="10dp">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_to_et"
            android:layout_weight="3"
            android:hint="@string/email_to_hint"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_et_secondary"
            android:padding="10dp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/send_btn"
            android:layout_weight="2"
            android:text="@string/send_txt"
            android:background="@drawable/bg_btn_selector"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <!--not sure if linear layout is needed-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/email_extra_lo"
        android:layout_below="@id/email_sending_lo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cc_tv"
            android:text="@string/email_cc_txt"
            android:drawableStart="@drawable/ic_add_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cc_et"
            android:visibility="gone"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_et_extra"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bcc_tv"
            android:text="@string/email_bcc_txt"
            android:drawableStart="@drawable/ic_add_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bcc_et"
            android:visibility="gone"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_et_extra"
            android:padding="10dp"/>
    </LinearLayout>




</RelativeLayout>