<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity"
    android:padding="10dp"
    android:background="@drawable/bg_event_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_date_tv"
        android:hint="@string/event_date_hint"
        android:drawableEnd="@drawable/ic_today_black_24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@drawable/bg_et_main"
        android:padding="12dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_time_tv"
        android:layout_below="@id/event_date_tv"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/event_time_hint"
        android:drawableEnd="@drawable/ic_access_time_black_24dp"
        android:gravity="center"
        android:background="@drawable/bg_et_main"
        android:padding="12dp"
        />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_title_et"
        android:inputType="text"
        android:layout_below="@id/event_time_tv"
        android:layout_marginTop="10dp"
        android:hint="@string/event_title_hint"
        android:background="@drawable/bg_et_secondary"
        android:padding="7dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_info_tv"
        android:text="@string/event_info_txt"
        android:drawableStart="@drawable/ic_add_black_24dp"
        android:layout_below="@id/event_title_et"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"
        android:lines="4"
        android:scrollbars="vertical"
        android:gravity="top"
        android:id="@+id/add_info_et"
        android:layout_below="@id/add_info_tv"
        android:layout_marginTop="5dp"
        android:inputType="text|textMultiLine"
        android:background="@drawable/bg_et_msg"
        android:padding="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/add_info_et"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/alarm_btn"
            android:layout_weight="1"
            android:text="@string/add_alarm_txt"
            android:drawableBottom="@drawable/ic_add_alarm_white_48dp"
            android:background="@drawable/bg_btn_selector"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            />


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/calendar_btn"
            android:layout_weight="1"
            android:text="@string/add_to_calendar_txt"
            android:drawableBottom="@drawable/ic_event_available_white_48dp"
            android:background="@drawable/bg_btn_selector"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</RelativeLayout>