<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#77C26E"
        android:layout_gravity="center"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/phone_bg"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_txt"
            android:textSize="50sp"
            android:id="@+id/phone_tv"
            android:gravity="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_edit_text_background"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:paddingStart="24dp"
            android:padding="7dp"
            android:textSize="18sp"
            android:inputType="phone"
            android:id="@+id/phone_et"
            android:gravity="center"
            android:maxLength="10"
            android:drawableEnd="@drawable/ic_phone_forwarded_black_24dp"
            android:hint="@string/phone_number_hint_txt"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#CE5858"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/email_bg"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_txt"
            android:textSize="50sp"
            android:gravity="center"
            android:id="@+id/email_tv"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_edit_text_background"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:paddingStart="24dp"
            android:padding="7dp"
            android:gravity="center"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:id="@+id/email_et"
            android:drawableEnd="@drawable/ic_mail_outline_black_24dp"
            android:hint="@string/email_hint_txt"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#F0DB55"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/event_bg"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_txt"
            android:textSize="50sp"
            android:gravity="center"
            android:id="@+id/event_tv"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_edit_text_background"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:paddingStart="24dp"
            android:padding="7dp"
            android:gravity="center"
            android:textSize="18sp"
            android:id="@+id/event_input_tv"
            android:drawableEnd="@drawable/ic_today_black_24dp"
            android:hint="@string/event_date_hint"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#AF61C4"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/note_bg"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_txt"
            android:textSize="50sp"
            android:gravity="center"
            android:id="@+id/note_tv"
            />


    </LinearLayout>



</LinearLayout>