<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity"
    android:background="@drawable/bg_phone_activity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/phone_number_ed"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableEnd="@drawable/ic_mic_black_48dp"
        android:hint="@string/phone_number_hint"
        android:gravity="start|center_vertical"
        android:background="@drawable/bg_et_main"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_action_txt"
        android:layout_above="@id/phone_options"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/phone_options"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/contacts_btn"
            android:layout_weight="1"
            android:text="@string/add_contact_txt"
            android:drawableBottom="@drawable/ic_person_add_white_48dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingLeft="0dp"
            android:paddingBottom="10dp"
            android:paddingRight="0dp"
            android:background="@drawable/bg_btn_selector"
            android:textColor="@color/white"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/call_btn"
            android:layout_weight="1"
            android:text="@string/call_txt"
            android:drawableBottom="@drawable/ic_phone_in_talk_white_48dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingLeft="0dp"
            android:paddingBottom="10dp"
            android:paddingRight="0dp"
            android:background="@drawable/bg_btn_selector"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>